manifests/mongodb-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-mongodb
  namespace: dev-mongodb
spec:
  type: LoadBalancer
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
