manifests/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: dev-mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
