manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-nodejs
  labels:
    service: hw-nodejs
spec:
  selector:
    app: hw-nodejs
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
      targetPort: 3000
