manifests/alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: dev.helloworld.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-ingress-controller
                namespace: kube-system
                port:
                  number: 80
