manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dev.helloworld.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw-nodejs
                port:
                  number: 3000
